Closed Bug 1785635 Opened 3 years ago Closed 3 years ago

Intermittent /html/canvas/element/manual/imagebitmap/imagebitmap-replication-exif-orientation.html | single tracking bug

Categories

(Testing :: web-platform-tests, defect, P3)

Default
defect

Tracking

(firefox111 fixed)

RESOLVED FIXED
111 Branch
Tracking Status
firefox111 --- fixed

People

(Reporter: jmaher, Assigned: angus.sawyer)

References

Details

(Keywords: intermittent-failure, intermittent-testcase)

Attachments

(1 file)

No description provided.

Additional information about this bug failures and frequency patterns can be found by running: ./mach test-info failure-report --bug 1785635

New flag added to nsLayoutUtils to ensure any exif specified orientation
is applied to surfaces obtained from HTMLImage elements irrespective of the
presence of the element in the DOM. For use in createImageBitmap where from-image is
the required behaviour.

Assignee: nobody → angus.sawyer
Status: NEW → ASSIGNED
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/1bc09c1e4279 Add flag to enforce from-image orientation for createImageBitmap r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: