Bug 1785635 Add flag to enforce from-image orientation for createImageBitmap r=emilio

New flag added to nsLayoutUtils to ensure any exif specified orientation
is applied to surfaces obtained from HTMLImage elements irrespective of the
presence of the element in the DOM. For use in createImageBitmap where from-image is
the required behaviour.

Differential Revision: https://phabricator.services.mozilla.com/D168356